More stuff still

--- a/notebooks/generate_all_synthetic_counterfactuals.ipynb
+++ b/notebooks/generate_all_synthetic_counterfactuals.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 12:24:41,360 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
-      "2025-02-02 12:24:41,362 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
-      "2025-02-02 12:24:41,363 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
-      "2025-02-02 12:24:41,365 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
-      "2025-02-02 12:24:41,366 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/kang.yaml\n",
-      "2025-02-02 12:24:41,367 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
-      "2025-02-02 12:24:41,368 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
-      "2025-02-02 12:24:41,369 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
-      "2025-02-02 12:24:41,370 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
+      "2025-02-05 14:44:44,687 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
+      "2025-02-05 14:44:44,689 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
+      "2025-02-05 14:44:44,690 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
+      "2025-02-05 14:44:44,692 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
+      "2025-02-05 14:44:44,694 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
+      "2025-02-05 14:44:44,695 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
+      "2025-02-05 14:44:44,697 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
+      "2025-02-05 14:44:44,699 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/kang.yaml\n",
+      "2025-02-05 14:44:44,701 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
      ]
     },
     {
@@ -31,14 +31,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 12:24:44,787 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
-      "2025-02-02 12:24:44,788 - INFO - Preprocessing training data\n",
-      "2025-02-02 12:24:44,789 - INFO - Using identity features for perturbations\n",
-      "2025-02-02 12:24:44,911 - INFO - Removing observations with perturbations not in the dataset as a column\n",
-      "2025-02-02 12:24:45,109 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
-      "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/data/loader.py:178: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
+      "2025-02-05 14:44:48,437 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
+      "2025-02-05 14:44:48,438 - INFO - Preprocessing training data\n",
+      "2025-02-05 14:44:48,440 - INFO - Using identity features for perturbations\n",
+      "2025-02-05 14:44:48,551 - INFO - Removing observations with perturbations not in the dataset as a column\n",
+      "2025-02-05 14:44:48,738 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
+      "/orcd/data/omarabu/001/opitcho/omnicell/notebooks/../omnicell/data/loader.py:175: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
       "  adata.obsm[\"embedding\"] = adata.X.toarray().astype('float32')\n",
-      "2025-02-02 12:25:22,401 - INFO - Doing OOD split\n"
+      "2025-02-05 14:45:25,689 - INFO - Doing OOD split\n"
      ]
     },
     {
@@ -126,16 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['k562', 'k562', 'k562', 'k562', 'k562', ..., 'k562', 'k562', 'k562', 'k562', 'k562']\n",
-      "Length: 10691\n",
-      "Categories (1, object): ['k562'] ['k562'] 1\n",
       "Creating source indices\n",
       "Creating target indices\n",
       "Creating pert indices\n",
@@ -148,70 +145,30 @@
    "source": [
     "import numpy as np\n",
     "from omnicell.models.datamodules import get_dataloader\n",
-    "dset, ns, dl = get_dataloader(adata, pert_ids=np.array(adata.obs[PERT_KEY].values), pert_map=pert_rep_map, collate='ot')\n"
+    "dset, dl = get_dataloader(adata, pert_ids=np.array(adata.obs[PERT_KEY].values), offline=False, pert_map=pert_rep_map, collate='ot')\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Perturbation 0 took: 5.06s\n",
-      "Perturbation 1 took: 5.17s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/models/distribute_shift_numpy.py:34: RuntimeWarning: invalid value encountered in divide\n",
-      "  p = p / p.sum()\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "pvals < 0, pvals > 1 or pvals contains NaNs",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m mean_pert \u001b[38;5;241m=\u001b[39m X_pert\u001b[38;5;241m.\u001b[39mmean(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     16\u001b[0m mean_shift \u001b[38;5;241m=\u001b[39m mean_pert \u001b[38;5;241m-\u001b[39m mean_ctrl\n\u001b[0;32m---> 18\u001b[0m preds \u001b[38;5;241m=\u001b[39m \u001b[43msample_pert\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_ctrl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweighted_dist\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmean_shift\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_rejections\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     20\u001b[0m     pert_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m pert_start\n",
-      "File \u001b[0;32m/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/models/distribute_shift_numpy.py:51\u001b[0m, in \u001b[0;36msample_pert\u001b[0;34m(ctrl, weighted_dist, mean_shift, max_rejections)\u001b[0m\n\u001b[1;32m     49\u001b[0m max_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.\u001b[39m \u001b[38;5;241m*\u001b[39m ctrl\n\u001b[1;32m     50\u001b[0m max_count[:, count_shift \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39minf\n\u001b[0;32m---> 51\u001b[0m samples \u001b[38;5;241m=\u001b[39m \u001b[43msample_multinomial_batch\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[43m    \u001b[49m\u001b[43mweighted_dist\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mabs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcount_shift\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_count\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_count\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_rejections\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_rejections\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     54\u001b[0m sampled_pert \u001b[38;5;241m=\u001b[39m ctrl \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39msign(count_shift) \u001b[38;5;241m*\u001b[39m samples\n\u001b[1;32m     55\u001b[0m sampled_pert \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mclip(sampled_pert, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "File \u001b[0;32m/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/models/distribute_shift_numpy.py:38\u001b[0m, in \u001b[0;36msample_multinomial_batch\u001b[0;34m(probs, counts, max_count, max_rejections)\u001b[0m\n\u001b[1;32m     36\u001b[0m s[over_max] \u001b[38;5;241m=\u001b[39m mc[over_max]\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# assert np.sum(s) + n_resample == c\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m s \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmultinomial\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_resample\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m over_max \u001b[38;5;241m=\u001b[39m s \u001b[38;5;241m>\u001b[39m mc\n\u001b[1;32m     40\u001b[0m num_rejections \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "File \u001b[0;32mnumpy/random/mtrand.pyx:4386\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.multinomial\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m_common.pyx:396\u001b[0m, in \u001b[0;36mnumpy.random._common.check_array_constraint\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m_common.pyx:382\u001b[0m, in \u001b[0;36mnumpy.random._common._check_array_cons_bounded_0_1\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: pvals < 0, pvals > 1 or pvals contains NaNs"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['k562'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from omnicell.models.distribute_shift_numpy import sample_pert, get_proportional_weighted_dist\n",
-    "\n",
-    "synthetic_counterfactuals = {}\n",
-    "for stratum in dset.strata:\n",
-    "    synthetic_counterfactuals[stratum] = {}\n",
-    "    X_ctrl = dset.source[stratum]\n",
-    "    mean_ctrl = X_ctrl.mean(axis=0)\n",
-    "    weighted_dist = get_proportional_weighted_dist(X_ctrl)\n",
-    "    for i, pert in enumerate(dset.unique_pert_ids):\n",
-    "        if i % 1 == 0:\n",
-    "            pert_start = time.time()\n",
-    "            # print(f\"{i} / {len(dset.unique_pert_ids)}\")\n",
-    "        \n",
-    "        X_pert = dset.target[stratum][pert]\n",
-    "        mean_pert = X_pert.mean(axis=0)\n",
-    "        mean_shift = mean_pert - mean_ctrl\n",
-    "\n",
-    "        preds = sample_pert(X_ctrl, weighted_dist, mean_shift, max_rejections=100)\n",
-    "        if i % 1 == 0:\n",
-    "            pert_time = time.time() - pert_start\n",
-    "            print(f\"Perturbation {i} took: {pert_time:.2f}s\")\n",
-    "        synthetic_counterfactuals[stratum][pert] = preds"
+    "dset.unique_pert_ids\n",
+    "dset.strata"
    ]
   },
   {
@@ -644,9 +601,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 / 20, 0 / 1849\n",
+      "0 / 20, 1 / 1849\n",
+      "0 / 20, 2 / 1849\n",
+      "0 / 20, 3 / 1849\n",
+      "0 / 20, 4 / 1849\n",
+      "0 / 20, 5 / 1849\n",
+      "0 / 20, 6 / 1849\n",
+      "0 / 20, 7 / 1849\n",
+      "0 / 20, 8 / 1849\n",
+      "0 / 20, 9 / 1849\n",
+      "0 / 20, 10 / 1849\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 27\u001b[0m\n\u001b[1;32m     23\u001b[0m         logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean shift shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmean_shift\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m         weighted_dist \u001b[38;5;241m=\u001b[39m get_proportional_weighted_dist(X_ctrl)\n\u001b[0;32m---> 27\u001b[0m         preds \u001b[38;5;241m=\u001b[39m \u001b[43msample_pert\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_ctrl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweighted_dist\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmean_shift\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_rejections\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m         synthetic_counterfactual_batch[stratum][pert] \u001b[38;5;241m=\u001b[39m preds\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mint16)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# Save as before\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "from omnicell.models.distribute_shift import sample_pert, get_proportional_weighted_dist\n",
@@ -739,11 +725,20 @@
     "    'unique_pert_ids': dset.unique_pert_ids,\n",
     "    'strata': dset.strata\n",
     "}\n",
+    "\n",
+    "\n",
     "with open('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/proportional_scot/synthetic_counterfactuals.pkl', 'wb') as f:\n",
     "    pickle.dump(data_dict, f)\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -775,7 +770,7 @@
   "kernelspec": {
    "display_name": "omnicell",
    "language": "python",
-   "name": "omnicell"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
