Finishing Proportional SCOT

--- a/notebooks/TEMPLATE.ipynb
+++ b/notebooks/TEMPLATE.ipynb
@@ -69,7 +69,7 @@
     "from pathlib import Path\n",
     "from omnicell.config.config import Config, ETLConfig, ModelConfig, DatasplitConfig, EvalConfig, EmbeddingConfig\n",
     "from omnicell.data.loader import DataLoader\n",
-    "from omnicell.constants import PERT_KEY, GENE_EMBEDDING_KEY, CONTROL_PERT\n",
+    "from omnicell.constants import PERT_KEY, GENE_EMBEDDING_KEY, CONTROL_PERT, OMNICELL_ROOT\n",
     "from train import get_model\n",
     "\n",
     "# Set up logging\n",
@@ -77,12 +77,12 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Configure paths\n",
-    "MODEL_CONFIG = ModelConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/models/scot/scot.yaml\")\n",
+    "MODEL_CONFIG = ModelConfig.from_yaml(f\"{OMNICELL_ROOT}/configs/models/scot/scot.yaml\")\n",
     "ETL_CONFIG = ETLConfig(name = \"no_preprocessing\", log1p = False, drop_unmatched_perts = True)\n",
     "EMBEDDING_CONFIG = EmbeddingConfig(pert_embedding='GenePT')\n",
     "\n",
-    "SPLIT_CONFIG = DatasplitConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
-    "EVAL_CONFIG = EvalConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
+    "SPLIT_CONFIG = DatasplitConfig.from_yaml(f\"{OMNICELL_ROOT}/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
+    "EVAL_CONFIG = EvalConfig.from_yaml(f\"{OMNICELL_ROOT}/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
     "\n",
     "# Load configurations\n",
     "config = Config(model_config=MODEL_CONFIG,\n",
@@ -110,7 +110,7 @@
     "adata, pert_rep_map = loader.get_training_data()\n",
     "\n",
     "# Get dimensions and perturbation IDs\n",
-    "input_dim = adata.obsm['embedding'].shape[1]\n",
+    "input_dim = adata.X.shape[1]\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "pert_ids = adata.obs[PERT_KEY].unique()\n",
     "gene_emb_dim = adata.varm[GENE_EMBEDDING_KEY].shape[1] if GENE_EMBEDDING_KEY in adata.varm else None\n",
