--- a/notebooks/Test_Scot_Loading.ipynb
+++ b/notebooks/Test_Scot_Loading.ipynb
@@ -2,19 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'synthetic'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Configure paths\u001b[39;00m\n\u001b[1;32m     25\u001b[0m MODEL_CONFIG \u001b[38;5;241m=\u001b[39m ModelConfig\u001b[38;5;241m.\u001b[39mfrom_yaml(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/orcd/data/omarabu/001/njwfish/omnicell/configs/models/scot/scot.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 26\u001b[0m ETL_CONFIG \u001b[38;5;241m=\u001b[39m \u001b[43mETLConfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_yaml\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/orcd/data/omarabu/001/njwfish/omnicell/configs/ETL/no_preproc_drop_unmatched_scot.yaml\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m EMBEDDING_CONFIG \u001b[38;5;241m=\u001b[39m EmbeddingConfig(pert_embedding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGenePT\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     29\u001b[0m SPLIT_CONFIG \u001b[38;5;241m=\u001b[39m DatasplitConfig\u001b[38;5;241m.\u001b[39mfrom_yaml(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m/orcd/data/omarabu/001/opitcho/omnicell/notebooks/../omnicell/config/config.py:39\u001b[0m, in \u001b[0;36mETLConfig.from_yaml\u001b[0;34m(cls, path)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_yaml\u001b[39m(\u001b[38;5;28mcls\u001b[39m, path: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mETLConfig\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 39\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43myaml\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msafe_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'synthetic'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-17 12:52:06,873 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/FrangiehIzar2021_protein.yaml\n",
+      "2025-02-17 12:52:06,875 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/PapalexiSatija2021_eccite_arrayed_RNA.yaml\n",
+      "2025-02-17 12:52:06,876 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/AdamsonWeissman2016_GSM2406677_10X005.yaml\n",
+      "2025-02-17 12:52:06,877 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/PapalexiSatija2021_eccite_protein.yaml\n",
+      "2025-02-17 12:52:06,879 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/SchraivogelSteinmetz2020_TAP_SCREEN__chromosome_11_screen.yaml\n",
+      "2025-02-17 12:52:06,880 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/DatlingerBock2021.yaml\n",
+      "2025-02-17 12:52:06,881 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/AdamsonWeissman2016_GSM2406675_10X001.yaml\n",
+      "2025-02-17 12:52:06,883 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/McFarlandTsherniak2020.yaml\n",
+      "2025-02-17 12:52:06,884 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/FrangiehIzar2021_RNA.yaml\n",
+      "2025-02-17 12:52:06,885 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/WeinrebKlein2020.yaml\n",
+      "2025-02-17 12:52:06,887 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/SrivatsanTrapnell2020_sciplex4.yaml\n",
+      "2025-02-17 12:52:06,888 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/GasperiniShendure2019_highMOI.yaml\n",
+      "2025-02-17 12:52:06,889 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/ZhaoSims2021.yaml\n",
+      "2025-02-17 12:52:06,891 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
+      "2025-02-17 12:52:06,892 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/ReplogleWeissman2022_rpe1.yaml\n",
+      "2025-02-17 12:52:06,893 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/PapalexiSatija2021_eccite_arrayed_protein.yaml\n",
+      "2025-02-17 12:52:06,895 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/AdamsonWeissman2016_GSM2406681_10X010.yaml\n",
+      "2025-02-17 12:52:06,896 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/SchraivogelSteinmetz2020_TAP_SCREEN__chromosome_8_screen.yaml\n",
+      "2025-02-17 12:52:06,897 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/GasperiniShendure2019_atscale.yaml\n",
+      "2025-02-17 12:52:06,898 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/TianKampmann2021_CRISPRi.yaml\n",
+      "2025-02-17 12:52:06,900 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/DatlingerBock2017.yaml\n",
+      "2025-02-17 12:52:06,901 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/SrivatsanTrapnell2020_sciplex2.yaml\n",
+      "2025-02-17 12:52:06,902 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
+      "2025-02-17 12:52:06,904 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/ReplogleWeissman2022_K562_gwps.yaml\n",
+      "2025-02-17 12:52:06,906 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/PapalexiSatija2021_eccite_RNA.yaml\n",
+      "2025-02-17 12:52:06,908 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/DixitRegev2016.yaml\n",
+      "2025-02-17 12:52:06,910 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/NormanWeissman2019_filtered.yaml\n",
+      "2025-02-17 12:52:06,911 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/TianKampmann2021_CRISPRa.yaml\n",
+      "2025-02-17 12:52:06,913 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/GasperiniShendure2019_lowMOI.yaml\n",
+      "2025-02-17 12:52:06,914 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/ShifrutMarson2018.yaml\n",
+      "2025-02-17 12:52:06,916 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/TianKampmann2019_iPSC.yaml\n",
+      "2025-02-17 12:52:06,917 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
+      "2025-02-17 12:52:06,920 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/GehringPachter2019.yaml\n",
+      "2025-02-17 12:52:06,921 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
+      "2025-02-17 12:52:06,923 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/XieHon2017.yaml\n",
+      "2025-02-17 12:52:06,924 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/ReplogleWeissman2022_K562_essential.yaml\n",
+      "2025-02-17 12:52:06,926 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/kang.yaml\n",
+      "2025-02-17 12:52:06,927 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/ChangYe2021.yaml\n",
+      "2025-02-17 12:52:06,929 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/SrivatsanTrapnell2020_sciplex3.yaml\n",
+      "2025-02-17 12:52:06,930 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/TianKampmann2019_day7neuron.yaml\n",
+      "2025-02-17 12:52:06,932 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-17 12:52:11,209 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
+      "2025-02-17 12:52:11,210 - INFO - Preprocessing training data\n",
+      "2025-02-17 12:52:11,212 - INFO - Using identity features for perturbations\n",
+      "2025-02-17 12:52:11,327 - INFO - Removing observations with perturbations not in the dataset as a column\n",
+      "2025-02-17 12:52:11,521 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
+      "2025-02-17 12:52:41,004 - INFO - Doing OOD split\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded:\n",
+      "- Number of cells: 279630\n",
+      "- Input dimension: 8563\n",
+      "- Number of perturbations: 1850\n"
      ]
     }
    ],
@@ -35,7 +99,7 @@
     "from pathlib import Path\n",
     "from omnicell.config.config import Config, ETLConfig, ModelConfig, DatasplitConfig, EvalConfig, EmbeddingConfig\n",
     "from omnicell.data.loader import DataLoader\n",
-    "from omnicell.constants import PERT_KEY, GENE_EMBEDDING_KEY, CONTROL_PERT\n",
+    "from omnicell.constants import PERT_KEY, GENE_EMBEDDING_KEY, CONTROL_PERT, OMNICELL_ROOT\n",
     "from omnicell.models.selector import load_model\n",
     "\n",
     "# Set up logging\n",
@@ -43,12 +107,12 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Configure paths\n",
-    "MODEL_CONFIG = ModelConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/models/scot/scot.yaml\")\n",
-    "ETL_CONFIG = ETLConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/ETL/no_preproc_drop_unmatched_scot.yaml\")\n",
+    "MODEL_CONFIG = ModelConfig.from_yaml(f\"{OMNICELL_ROOT}/configs/models/scot/proportional_scot.yaml\")\n",
+    "ETL_CONFIG = ETLConfig.from_yaml(f\"{OMNICELL_ROOT}/configs/ETL/no_preproc_drop_unmatched_scot.yaml\")\n",
     "EMBEDDING_CONFIG = EmbeddingConfig(pert_embedding='GenePT')\n",
     "\n",
-    "SPLIT_CONFIG = DatasplitConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
-    "EVAL_CONFIG = EvalConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
+    "SPLIT_CONFIG = DatasplitConfig.from_yaml(f\"{OMNICELL_ROOT}/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
+    "EVAL_CONFIG = EvalConfig.from_yaml(f\"{OMNICELL_ROOT}/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
     "\n",
     "# Load configurations\n",
     "config = Config(model_config=MODEL_CONFIG,\n",
@@ -76,7 +140,7 @@
     "adata, pert_rep_map = loader.get_training_data()\n",
     "\n",
     "# Get dimensions and perturbation IDs\n",
-    "input_dim = adata.obsm['embedding'].shape[1]\n",
+    "input_dim = adata.X.shape[1]\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "pert_ids = adata.obs[PERT_KEY].unique()\n",
     "gene_emb_dim = adata.varm[GENE_EMBEDDING_KEY].shape[1] if GENE_EMBEDDING_KEY in adata.varm else None\n",
@@ -90,17 +154,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-06 20:51:21,137 - INFO - SCOT model selected\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_14.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_13.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_8.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_1.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_6.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_20.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_12.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_15.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_7.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_0.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_9.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_3.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_4.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_18.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_16.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_11.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_5.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_2.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_10.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_17.pkl'),\n",
+       " PosixPath('/orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/synthetic_data/proportional_scot_no_preproc_drop_unmatched_b924ee39/synthetic_counterfactuals_19.pkl')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "\n",
+    "adata.uns['synthetic_data_paths']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model = get_model(config.model_config.name, config.model_config.parameters, loader, pert_rep_map, input_dim, device, pert_ids)"
    ]
