changes for cell embedding model

--- a/notebooks/test_neel_ds.ipynb
+++ b/notebooks/test_neel_ds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,40 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dd = Catalogue.get_dataset_details('AdamsonWeissman2016_GSM2406675_10X001')\n",
+    "dd = Catalogue.get_dataset_details('ReplogleWeissman2022_K562_essential')\n",
     "\n",
-    "adata = sc.read(dd.path)\n"
+    "adata = sc.read(dd.path, backed=\"r+\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0., 10.,  0.,  0.,  4.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.], dtype=float32)"
+       "['K562']\n",
+       "Categories (1, object): ['K562']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adata.X.toarray()[0,:100]"
+    "adata.obs[dd.cell_key].unique()"
    ]
   },
   {
